--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     "@nuxtjs/auth": "^4.9.1",
     "@nuxtjs/axios": "^5.13.6",
     "@nuxtjs/i18n": "^7.2.0",
-    "@nuxtjs/pwa": "^3.3.5",
+    "axios": "^0.25.0",
     "balm-ui": "^8.46.6",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vuex-crud": "^0.3.2",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
