start with news page

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/style-resources": "^1.2.1",
     "@nuxtjs/vuetify": "^1.12.3",
-    "sass": "^1.49.7"
+    "deepmerge": "^4.2.2",
+    "sass": "^1.32.13",
+    "sass-loader": "^12.4.0"
   }
 }
