--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@nuxtjs/style-resources": "^1.2.1",
     "@nuxtjs/vuetify": "^1.12.3",
     "deepmerge": "^4.2.2",
-    "sass": "^1.32.13",
-    "sass-loader": "^12.4.0"
+    "sass": "^1.32.13"
   }
 }
