add trade graph

--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "balm-ui": "^8.46.6",
     "core-js": "^3.19.3",
     "nuxt": "^2.15.8",
-    "vue-moment": "^4.1.0",
+    "trading-vue-js": "^1.0.2",
     "vue-apexcharts": "^1.6.2",
+    "vue-moment": "^4.1.0",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuex-crud": "^0.3.2",
