--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -29,7 +29,7 @@ definitions:
         script:
           - docker login -u alfex -p 3wAadoLIG3IxFh21021994
           - docker build -t alfex/api-laravel:${BITBUCKET_BUILD_NUMBER}_f_d -f DockerfileDev .
-          - docker push alfex/laravel:${BITBUCKET_BUILD_NUMBER}_f_d
+          - docker push alfex/api-laravel:${BITBUCKET_BUILD_NUMBER}_f_d
         services:
           - docker
     - step: &deploy-dev
