--- a/.env.dev
+++ b/.env.dev
@@ -1,2 +1,3 @@
 API_BASE=https://api2.alfextrading.com/
 FILE_SERVER_BASE=https://api2.alfextrading.com/storage/
+WS_SERVER_BASE=ws://getaway-ws-server.herokuapp.com
