--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -27,9 +27,9 @@ definitions:
         caches:
           - docker
         script:
-          - docker login -u alfex -p 3wAadoLIG3IxFh21021994
-          - docker build -t alfex/api-laravel:${BITBUCKET_BUILD_NUMBER}_f_d -f DockerfileDev .
-          - docker push alfex/api-laravel:${BITBUCKET_BUILD_NUMBER}_f_d
+          - docker login -u $DOCKER_GCR_REPO_URL_DEV -p $DOCKER_HUB_PASSWORD_DEV
+          - docker build -t $DOCKER_GCR_REPO_URL_DEV/$DOCKER_IMAGE_NAME_DEV:${BITBUCKET_BUILD_NUMBER}_f_d -f DockerfileDev .
+          - docker push $DOCKER_GCR_REPO_URL_DEV/$DOCKER_IMAGE_NAME_DEV:${BITBUCKET_BUILD_NUMBER}_f_d
         services:
           - docker
     - step: &deploy-dev
@@ -38,9 +38,9 @@ definitions:
         script:
           - echo ${GCLOUD_API_KEYFILE} > ~/.gcloud-api-key.json
           - gcloud auth activate-service-account --key-file ~/.gcloud-api-key.json
-          - gcloud container clusters get-credentials test-dev --zone=europe-west1 --project alfex-340710
-          - docker login -u alfex -p 3wAadoLIG3IxFh21021994
-          - kubectl set image deployment front  app=alfex/api-laravel:${BITBUCKET_BUILD_NUMBER}_f_d --record --namespace=default
+          - gcloud container clusters get-credentials $K8s_CLUSTER_NAME_DEV --zone=$GCLOUD_ZONE_DEV --project $GCLOUD_PROJECT_ID_DEV
+          - docker login -u $DOCKER_GCR_REPO_URL_DEV -p $DOCKER_HUB_PASSWORD_DEV
+          - kubectl set image deployment ${K8s_DEPLOYMENT_NAME_DEV}  ${K8s_DEPLOYMENT_CONTAINER_NAME_DEV}=${DOCKER_GCR_REPO_URL_DEV}/${DOCKER_IMAGE_NAME_DEV}:${BITBUCKET_BUILD_NUMBER}_f_d --record --namespace=${K8s_NAMESPACE_DEV}
         services:
           - docker
     - step: &version_update_prod
