--- a/DockerfileDev
+++ b/DockerfileDev
@@ -9,6 +9,7 @@ RUN apk --no-cache --virtual build-dependencies add \
     g++
 RUN npm install
 COPY . .
+RUN ln -f -s config/ProfInvest/config.json config/config.json
 RUN npm run build
 
 
