start with validation payment card

--- a/package.json
+++ b/package.json
@@ -1,37 +1,42 @@
 {
-  "name": "vue-platform",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "dev": "nuxt",
-    "build": "nuxt build",
-    "start": "nuxt start",
-    "generate": "nuxt generate"
-  },
-  "dependencies": {
-    "@nuxtjs/auth": "^4.9.1",
-    "@nuxtjs/axios": "^5.13.6",
-    "@nuxtjs/i18n": "^7.2.0",
-    "apexcharts": "^3.33.1",
-    "axios": "^0.25.0",
-    "balm-ui": "^8.46.6",
-    "card": "^2.5.4",
-    "core-js": "^3.19.3",
-    "nuxt": "^2.15.8",
-    "trading-vue-js": "^1.0.2",
-    "vue-apexcharts": "^1.6.2",
-    "vue-moment": "^4.1.0",
-    "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14",
-    "vuetify-credit-card": "^1.0.1",
-    "vuex-crud": "^0.3.2",
-    "webpack": "^4.46.0"
-  },
-  "devDependencies": {
-    "@nuxtjs/dotenv": "^1.4.1",
-    "@nuxtjs/style-resources": "^1.2.1",
-    "@nuxtjs/vuetify": "^1.12.3",
-    "deepmerge": "^4.2.2",
-    "sass": "^1.32.13"
-  }
+    "name": "vue-platform",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "nuxt",
+        "build": "nuxt build",
+        "start": "nuxt start",
+        "generate": "nuxt generate"
+    },
+    "dependencies": {
+        "@fortawesome/free-regular-svg-icons": "^6.0.0",
+        "@fortawesome/free-solid-svg-icons": "^6.0.0",
+        "@fortawesome/vue-fontawesome": "^2.0.6",
+        "@nuxtjs/auth": "^4.9.1",
+        "@nuxtjs/axios": "^5.13.6",
+        "@nuxtjs/i18n": "^7.2.0",
+        "apexcharts": "^3.33.1",
+        "axios": "^0.25.0",
+        "balm-ui": "^8.46.6",
+        "card": "^2.5.4",
+        "core-js": "^3.19.3",
+        "nuxt": "^2.15.8",
+        "trading-vue-js": "^1.0.2",
+        "vue-apexcharts": "^1.6.2",
+        "vue-credit-card-validation": "^0.1.11",
+        "vue-moment": "^4.1.0",
+        "vue-server-renderer": "^2.6.14",
+        "vue-template-compiler": "^2.6.14",
+        "vuetify-credit-card": "^1.0.1",
+        "vuex-crud": "^0.3.2",
+        "webpack": "^4.46.0"
+    },
+    "devDependencies": {
+        "@fortawesome/fontawesome-free": "^6.0.0",
+        "@nuxtjs/dotenv": "^1.4.1",
+        "@nuxtjs/style-resources": "^1.2.1",
+        "@nuxtjs/vuetify": "^1.12.3",
+        "deepmerge": "^4.2.2",
+        "sass": "^1.32.13"
+    }
 }
